# CoRECT

./: .gitignore  README.md  index.html  pyproject.toml
share_results/E5MultilingualWrapper/arguana/dim=1024/q=1024_2_pq/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=1024_8_pq/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=1024_lsh/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=128_2_pq/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=128_8_pq/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=128_pca/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=16_bfloat16/: arguana.json
share_results/E5MultilingualWrapper/arguana/dim=1024/q=16_half/: arguana.json
src/core/: README.md  config.py  core.py  utils.py
src/core/cli/: create.py  prepare.py  sampling.py
src/core/cli/huggingface/: hf_push.py  readme.py
src/corect/: compression_registry.py  config.py  corect.py  dataset_utils.py  eval_utils.py  utils.py
src/corect/cli/: evaluate.py  statistics.py
src/corect/cli/visualize/: heatmap copy.py  heatmap.py  line_chart.py  pareto_plot.py
src/corect/model_wrappers/: AbstractModelWrapper.py  E5MultilingualWrapper.py  JinaV3Wrapper.py  SnowflakeWrapper.py  __init__.py  utils.py
src/corect/quantization/: AbstractCompression.py  BinaryCompression.py  FloatCompression.py  LSHCompression.py  MinMaxCompression.py  PercentileCompression.py  PrincipalComponentAnalysis.py  ProductQuantization.py
(+13648 files in other folders)
